tag selector header bottom border

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
 html {font-size:x-large;}
 h1 {font-family: Trebuchet, Tahoma, Arial, sans-serif;}
 h2 {font-family: Tahoma, Verdana, Geneva;}
+header{border-style: none none solid none;}
