CLASS SELECTOR list-type to square

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,3 +2,5 @@ html {font-size:x-large;}
 h1 {font-family: Trebuchet, Tahoma, Arial, sans-serif;}
 h2 {font-family: Tahoma, Verdana, Geneva;}
 header{border-style: none none solid none;}
+
+.class-list {list-style-type: square}
