--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,4 @@ header{border-style: none none solid none;}
 
 .class-list {list-style-type: square}
 .item {border-style: dotted dotted dotted dotted;}
+.even {background-color: grey;}
