--- a/css/styles.css
+++ b/css/styles.css
@@ -7,3 +7,6 @@ header{border-style: none none solid none;}
 .item {border-style: dotted dotted dotted dotted;}
 .even {background-color: grey;}
 .odd {background-color: black; color: white;}
+
+#item1 {font-size: 30px;}
+#item2 {text-align: right;}
