--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,17 @@
+/*TAG SELECTORS*/
 html {font-size:x-large;}
 h1 {font-family: Trebuchet, Tahoma, Arial, sans-serif;}
 h2 {font-family: Tahoma, Verdana, Geneva;}
 header{border-style: none none solid none;}
 
+/*CLASS SELECTORS*/
 .class-list {list-style-type: square}
 .item {border-style: dotted dotted dotted dotted;}
 .even {background-color: grey;}
 .odd {background-color: black; color: white;}
 
+/*ID SELECTORS*/
 #item1 {font-size: 30px;}
 #item2 {text-align: right;}
+
+/*ADVANCED SELECTORS*/
