--- a/css/styles.css
+++ b/css/styles.css
@@ -15,3 +15,4 @@ header{border-style: none none solid none;}
 #item2 {text-align: right;}
 
 /*ADVANCED SELECTORS*/
+ol > li {padding:5px; background-color: grey;}
