ADVANCED SELECTORS sublist li a:hover background-color: yellow; li a:active background-color: red. Background without hover or active is still grey.

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,3 +16,5 @@ header{border-style: none none solid none;}
 
 /*ADVANCED SELECTORS*/
 ol > li {padding:5px; background-color: grey;}
+li a:hover {background-color: yellow ;}
+li a:active {background-color: red;}
