--- a/css/styles.css
+++ b/css/styles.css
@@ -18,3 +18,4 @@ header{border-style: none none solid none;}
 ol > li {padding:5px; background-color: grey;}
 li a:hover {background-color: yellow ;}
 li a:active {background-color: red;}
+li:nth-child(2n+1){background-color: green;}
