ADVANCED SELECTOR CodeDev title link now has underline off when hovering. Problem remaining: yellow background being added to other links on page besides those in sublist.

--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,8 @@ header{border-style: none none solid none;}
 
 /*ADVANCED SELECTORS*/
 ol > li {padding:5px; background-color: grey;}
+li:nth-child(2n+1){background-color: green;}
+
 li a:hover {background-color: yellow ;}
 li a:active {background-color: red;}
-li:nth-child(2n+1){background-color: green;}
+a[title="CodeDev"]:hover {text-decoration: none;}
