--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,6 @@ header{border-style: none none solid none;}
 ol > li {padding:5px; background-color: grey;}
 li:nth-child(2n+1){background-color: green;}
 
-li a:hover {background-color: yellow ;}
-li a:active {background-color: red;}
+li > a:hover {background-color: yellow ;}
+li > a:active {background-color: red;}
 a[title="CodeDev"]:hover {text-decoration: none;}
